2002-05-06  John Levon  <moz@compsoc.man.ac.uk>

	Massive re-organisation of code + build. Most
	files have been changed. Some small cosmetic
	changes.
 
	* libutil/:
	* libutil++/: general-purpose utility libs

	* libop/: oprofile-specific utility lib

	* utils/: moved op_start et al to this dir

	* events/:
	* util/: removed

	* libutil++/child_reader.cpp: make sure to set
	  member "pid", not local variable

2002-05-05  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/op_session.c: tweak error message when session already
	  exist. Avoid to op_dump when profiler is not started.

2002-05-05  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update:

	* dae/op_session.c: do not create empty session directory
	  and backup oprofileg.log too
	* dae/opd_util.c:
	* op_user.h: minor related change

2002-05-05  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.xml: update copyright for 2002

	* doc/xsl/xhtml-chunk.xsl: indent=yes
 
2002-05-05  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
	
	* Makefile.in: update my release steps
 
2002-05-05  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: ->0.3cvs

	* results/: hmm, remove /all/ the files 
 
2002-05-04  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.2
 
2002-05-04  William Cohen  <wcohen@nc.rr.com>

	* doc/oprofile.xml: add note on power management
 
2002-05-03  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in:
	* doc/xsl/xhtml-common.xsl:
	* doc/xsl/xhtml.xsl:
	* doc/xsl/xhtml-chunk.xsl: use some xsl to fix
	  some of the problems (not all :()
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_session.c: couple of improvements
 
	* dae/opd_util.c: fix warning

	* doc/oprofile.xml: some docs on op_session

	* pp/op_time.cpp: introduce -s parameter (should be
	  in all utils)
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* oprof_report/Makefile.in: disable for release
 